# poetry_travis

./: .flake8  .gitignore  .travis.yml  README.md  pyproject.toml
poetry_travis/: poetry_travis.py
tests/: test_poetry_travis.py
