[tool.poetry]
name = "poetry-travis"
version = "0.1.0"
description = "Test"
authors = ["Deepak <dmallubhotla+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
